components/infra/gateway-api/base/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-tls-secrets
  namespace: apps
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: "" # core API group (Secret, Service, ConfigMap, etc.)
      kind: Secret
